--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,7 @@ cython_debug/
 # Certain data needed to be downloaded manually due to the size restriction
 ExampleData/Comparing_min_1.rhs
 ExampleData/Comparing_min_2.rhs
+ExampleData/CalciumMEARecording.rhs
 ExampleData/example_data.zip
 ExampleData/frames/
 
